# GRAVITY

./: .gitattributes  .gitignore  AGENTS.md  README.md  README_zh.md  pyproject.toml  readthedocs.yaml
data/: README.md  pancreas_long.csv
data/pancreas/reference_checkpoints/: pancreas_genes.txt  pancreas_stage1.ckpt  pancreas_stage2.ckpt
docs/: Makefile  conf.py  index.md  requirements.txt
docs/api/: gravity.md  index.md
docs/tutorials/: index.md  inspect_outputs.md  pancreas_reference_analysis.ipynb  prep_h5ad_to_csv.md  run_full_pipeline.md
gravity/: README.md  README_zh.md  __init__.py  pipeline.py  smoke_test.py  smoke_test_attention.py  velocity.py
gravity/analysis/: __init__.py  attention_explain.py  batc.py  importance.py
gravity/data/: __init__.py  datasets.py  preprocessing.py
gravity/models/: __init__.py  core.py  gravity_model.py
gravity/plotting/: __init__.py  velocity.py
gravity/tools/: __init__.py  future.py
gravity/train/: __init__.py  attention.py  cell_model.py  cell_stage.py  gene_model.py  gene_stage.py  losses.py
gravity/utils/: __init__.py  colors.py  logging.py  paths.py
notebooks/: pancreas_reference_analysis.ipynb
prior_data/: README.md
