[build-system]
requires = [
  "setuptools>=59.6,<68; python_version<'3.8'",
  "setuptools>=61; python_version>='3.8'",
  "wheel>=0.36,<0.41; python_version<'3.8'",
  "wheel>=0.36; python_version>='3.8'"
]
build-backend = "setuptools.build_meta"

[project]
name = "gravity"
version = "0.1.0"
description = "GRAVITY predicts RNA velocity and regulatory rewiring by dynamic regulatory mechanism-enhanced deep learning"
readme = "gravity/README.md"
requires-python = ">=3.10,<3.12"
authors = [{name = "GRAVITY Contributors"}]
license = {text = "MIT"}
keywords = ["single-cell", "rna velocity", "pytorch", "bioinformatics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research"
]

# Keep upper bounds tight enough that pip does not silently upgrade a working
# CUDA/PyTorch stack into an incompatible major dependency set.
dependencies = [
  "torch>=2.0,<2.1",
  "pytorch-lightning>=2.0,<2.1",
  "torchmetrics>=0.11,<1.0",
  "setuptools>=61,<81",
  "numpy>=1.24,<2.0",
  "pandas>=1.5,<2.2",
  "scipy>=1.9,<1.12",
  "scikit-learn>=1.2,<1.5",
  "scanpy>=1.9,<1.10",
  "anndata>=0.9,<0.11",
  "h5py>=3.8,<3.12",
  "matplotlib>=3.7,<3.9",
  "bezier>=2023.7,<2025",
  "einops>=0.6,<0.8",
  "tqdm>=4.64,<5"
]

[project.optional-dependencies]
plots = [
  "umap-learn>=0.5,<0.6",
  "seaborn>=0.12,<0.14"
]

[tool.setuptools.packages.find]
include = ["gravity", "gravity.*"]
